# hotel-pricing

./: .env.local.example  .gitignore  CLAUDE.md  README.md  package-lock.json  tsconfig.json
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/models/: event.py  hotel.py  pricing.py
backend/app/routers/: events.py  hotels.py  market.py  pricing.py
backend/app/services/: factor_calculator.py  pricing_engine.py
frontend/: .env.local.example  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/events/: page.tsx
frontend/src/app/hotels/: page.tsx
frontend/src/app/hotels/[hotel_id]/: page.tsx
frontend/src/components/hotels/: HotelList.tsx
frontend/src/components/pricing/: FactorBreakdownChart.tsx  PricingSimulator.tsx
frontend/src/lib/: api-client.ts  supabase-server.ts  types.ts
src/app/: layout.tsx
src/app/api/pricing/calculate/: route.ts
src/app/events/: page.tsx
src/app/hotels/: page.tsx
src/app/hotels/[hotel_id]/: page.tsx
src/components/hotels/: HotelList.tsx
src/components/pricing/: FactorBreakdownChart.tsx  PricingSimulator.tsx  RateCalendarChart.tsx
src/lib/: api-client.ts  types.ts
supabase/migrations/: 0001_create_hotels.sql  0002_create_room_types.sql  0003_create_events.sql  0004_create_rate_calendar.sql  0005_create_occupancy_history.sql  0006_create_comp_set.sql  0007_create_pricing_factors.sql
supabase/seed/: 01_hotels.sql  02_room_types.sql  03_events_2026.sql  04_rate_calendar.sql
